# 8086-rocket

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  rocket.asm  virtual.h
src/resources/: space_noise.fs  stars.fs
